--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .container {
-    width: 1352px;
+    max-width: 1352px;
     margin: 0 auto;
 }
 body {
@@ -72,4 +72,347 @@ body {
 
 .nav-element:last-child {
     padding-right: 0;
+}
+
+.hero .container {
+    max-height: 712px;
+    width: 100%;
+}
+
+.hero {
+    margin-top: 130px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.banner-title {
+    font-family: var(--raleway);
+    font-size: 49px;
+    text-align: center;
+}
+
+.banner-text {
+    font-family: var(--raleway);
+    font-size: 16px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 38px;
+}
+
+.banner-button {
+    width: 440px;
+    height: 67px;
+    border-radius: 40px;
+    box-shadow: 5px 10px 14px #07ACE629;
+    background: var(--color-primary);
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+
+}
+.banner-btn {
+    color: var(--color-white);
+    font-size: 16px;
+    font-family: var(--openSans);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.hero-image {
+    background-image: url("../assets/background.png") ;
+    height: 519px;
+    width: 100vw;
+    background-size: cover;
+    background-position: center;
+}
+
+.section {
+    padding: 100px;
+    width: 100%
+    display: inline-block;
+    position: center;
+}
+
+.section-title {
+    font-family: var(--raleway);
+    font-size: 36px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.platform-list {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 100px;
+}
+
+.platform-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.border-photo {
+    width: 62.71px;
+    height: 62.71px;
+    border-radius: 50%;
+    position: relative;
+}
+
+.border-photo-primary {
+    background: var(--color-redish);
+}
+
+.border-photo-secondary {
+    background: var(--color-primary);
+}
+
+.border-photo-tertiary {
+    background: var(--color-greenL);
+}
+.photo-primary {
+    position: absolute;
+    left: 30px;
+    top: 4px;
+}
+
+.photo-secondary {
+    position: absolute;
+    left: 20px;
+    top: 15px;
+}
+
+.photo-tertiary {
+    position: absolute;
+    left: 30px;
+    top: 10px;
+}
+
+.platform-section-title {
+    font-family: var(--raleway);
+    font-weight: 800;
+    letter-spacing: 5.96px;
+    color: var(--color-black);
+    font-size: 20px;
+    margin-top: 14.18px;
+    margin-bottom: 19.11px;
+    text-align: center;
+}
+
+.platform-section-text {
+    font-family: var(--raleway);
+    font-size: 16px;
+    color: var(--color-grey);
+}
+
+.sections-benefits {
+    background: var(--color-light-grey);
+    width: 100vw;
+    height: 1395px;
+    display: flex;
+    justify-content: center;
+}
+.sections-benefits-box {
+    width: 1124px;
+    padding-top: 105px;
+}
+.benefits-box-primary {
+    height: 370px;
+    background: var(--color-white);
+    margin-bottom: 37px;
+    padding-top: 91px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.benefits-box-secondary {
+    height: 370px;
+    background: var(--color-white);
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-primary-article {
+    margin-left: 35px;
+    margin-right: 169px;
+}
+
+.box-title {
+    font-family: var(--raleway);
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+
+.box-text {
+    font-family: var(--openSans);
+    font-size: 16px;
+}
+
+.box-primary-border {
+    border-bottom: 4px solid var(--color-redish);
+    width: 327.64px;
+    margin-top: 50px;
+}
+.benefits-photo-primary {
+    padding-right: 117px;
+}
+.sections-benefits-photo {
+    width: 386px;
+    position: relative;
+    z-index: 10000;
+}
+
+.benefits-photo-symbol-primary  {
+    background: var(--color-redish);
+    width: 180px;
+    height: 180px;
+    background-size: cover;
+    border-radius: 41px;
+    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    position: relative;
+    top: -250px;
+    right: -215px;
+    z-index: 1;
+}
+.benefits-photo-secondary {
+    display: inline-flex;
+    position: relative;
+}
+.iphone {
+    width: 426px;
+    margin-left: 70px;
+    margin-bottom: 13px;
+    margin-top: 29px;
+    z-index: 100;
+}
+
+.benefits-photo-symbol-secondary {
+    width: 320px;
+    height: 320px;
+    background: var(--color-primary);
+    border-radius: 50%;
+    position: absolute;
+    left: 70px;
+    top: 12px;
+}
+
+.box-secondary-article {
+    margin-top: 69px;
+    margin-left: 192px;
+}
+.box-title-secondary {
+    margin-right: 190px;
+}
+
+.box-secondary-border {
+    border-bottom: 4px solid var(--color-primary);
+    width: 327.81px;
+    margin-top: 50px;
+}
+
+.benefits-box-tertiary {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 37.67px;
+}
+
+.box-tertiary-article {
+    width: 623px;
+    height: 370px;
+    background: var(--color-white);
+    padding: 0 35px  ;
+}
+
+.box-photo-tertiary {
+    width: 440px;
+    height: 370px;
+    background: var(--color-greenL);
+}
+
+.box-title-tertiary {
+    margin-top: 63.33px;
+    margin-right: 206px;
+}
+
+.box-tertiary-border {
+    border-bottom: 4px solid var(--color-greenL);
+    width: 327.81px;
+    margin-top: 50px;
+}
+
+.trumpet {
+    width: 295px;
+    margin-top: 98.21px;
+    margin-left: 62.31px;
+}
+
+.section-price {
+    padding-top: 100px;
+    height: 616px;
+    width: 1266px;
+
+
+}.section-price-main {
+     display: flex;
+     flex-wrap: wrap;
+    justify-content: space-between;
+ }
+
+ .section-title-price {
+     margin-bottom: 50px;
+ }
+
+ .sections-price-box {
+     width: 372px;
+     height: 461px;
+     border: 1px solid var(--color-redish);
+     border-radius: 18px;
+ }
+
+.box-professional {
+    width: 405px;
+    height: 500px;
+    border: 1px solid var(--color-primary);
+    border-radius: 18px;
+}
+
+.box-premium {
+    width: 372px;
+    height: 461px;
+    border: 1px solid var(--color-greenL);
+    border-radius: 18px;
+}
+
+.price-box-title {
+    font-family: var(--raleway);
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 34px;
+}
+
+.box-price {
+    font-family: var(--openSans);
+    font-size: 46px;
+    text-align: center;
+    margin-top: 14px;
+}
+
+.box-basic-price {
+    color: var(--color-redish);
+}
+
+.box-professional-price {
+    color: var(--color-primary);
+}
+
+.box-premium-price {
+    color: var(--color-greenL);
 }
