--- a/css/style.css
+++ b/css/style.css
@@ -359,21 +359,24 @@ body {
     width: 1266px;
 
 
-}.section-price-main {
+}.price-body {
      display: flex;
      flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
  }
 
  .section-title-price {
      margin-bottom: 50px;
  }
 
- .sections-price-box {
+ .box-basic {
      width: 372px;
      height: 461px;
      border: 1px solid var(--color-redish);
      border-radius: 18px;
+     display: inline-block;
+     position: relative;
  }
 
 .box-professional {
@@ -381,6 +384,7 @@ body {
     height: 500px;
     border: 1px solid var(--color-primary);
     border-radius: 18px;
+    position: relative;
 }
 
 .box-premium {
@@ -388,6 +392,7 @@ body {
     height: 461px;
     border: 1px solid var(--color-greenL);
     border-radius: 18px;
+    position: relative;
 }
 
 .price-box-title {
@@ -398,15 +403,17 @@ body {
     margin-top: 34px;
 }
 
-.box-price {
+.price-value {
     font-family: var(--openSans);
     font-size: 46px;
     text-align: center;
     margin-top: 14px;
+    padding: 10px 0;
 }
 
 .box-basic-price {
     color: var(--color-redish);
+    margin-bottom: 50px;
 }
 
 .box-professional-price {
@@ -415,4 +422,179 @@ body {
 
 .box-premium-price {
     color: var(--color-greenL);
+}
+
+.price-limited {
+    font-family: var(--raleway);
+    font-size: 12px;
+    text-align: center;
+    margin: 5px;
+    color: #13253B;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+
+.price-item {
+    font-family: var(--openSans);
+    font-size: 14px;
+    color: var(--color-black);
+    margin-bottom: 20px;
+}
+.price-items {
+    text-align: center;
+}
+.price-item::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    display: inline-block;
+    margin-right: 10px;
+    background-image: url("../assets/ckechmark-1.svg");
+}
+
+.price-item-not::before {
+    background-image: url("../assets/close.svg");
+}
+
+.btn {
+    background: var(--color-redish);
+    width: 150px;
+    height: 50px;
+    border-radius: 23px;
+    position: relative;
+    text-decoration: none;
+    color: white;
+    font-family: var(--openSans);
+    font-size: 13px;
+    padding: 16px 57px;
+}
+
+.btn-basic {
+    bottom: -95px;
+    left: 105px
+}
+
+.btn-professional {
+    bottom: -116px;
+    left: 130px;
+}
+
+.btn-premium {
+    bottom: -80px;
+    left: 108px;
+}
+
+.section-contact {
+    display: flex;
+    justify-content: center;
+}
+
+.container-contact {
+    width: 896px;
+    height: 376px;
+    margin-top: 155px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.contact-box {
+    width: 342px;
+    color: var(--color-black);
+    margin-right: 114px;
+}
+
+.contact-title {
+    font-family: var(--raleway);
+    font-size: 49px;
+    margin-bottom: 22px;
+    text-align: left;
+}
+
+.contact-text {
+    font-family: var(--openSans);
+    font-size: 16px;
+}
+
+.contact-info {
+    display: flex;
+    margin-top: 42px;
+    font-family: var(--openSans);
+    font-size: 16px;
+    color: var(--color-primary);
+}
+
+.contact-email {
+    margin-right: 20px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+.form-row {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+
+}
+
+.form-label {
+    font-family: var(--openSans);
+    font-style: 11px;
+    letter-spacing: 3.28px;
+    text-transform: uppercase;
+    color: var(--color-primary);
+}
+
+.form-control{
+    margin-top: 42px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom-color: var(--color-primary);
+}
+.checkbox {
+    display: flex;
+}
+.checkbox input {
+    width: 24px;
+    height: 24px;
+}
+.checkbox input {
+    width: 22px;
+    height: 22px;
+    border: 1px solid #D1D1D1;
+    border-radius: 8px;
+    flex-shrink: 0;
+    appearance: none;
+    margin-right: 10px;
+}
+.checkbox span {
+    font-size: 12px;
+    line-height: 1.2;
+    color: #B2B2B2;
+}
+
+.checkbox input:checked {
+    background-image: url("../images/icon_check.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 15px;
+}
+.form-row-last {
+    display: flex;
+    justify-content: flex-end;
+}
+.form-button {
+    width: 142px;
+    height: 44px;
+    border-radius: 40px;
+    border: 1px solid var(--color-primary);
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--color-white);
+    background: none;
+    cursor: pointer;
+    font-size: 14px;
+    box-shadow:  0 3px 6px rgba(255,0,0,0.3);
 }
