--- a/css/style.css
+++ b/css/style.css
@@ -125,16 +125,17 @@ body {
 .hero-image {
     background-image: url("../assets/background.png") ;
     height: 519px;
-    width: 100vw;
-    background-size: cover;
+    width: 100%;
+
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .section {
     padding: 100px;
-    width: 100%
-    display: inline-block;
-    position: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .section-title {
@@ -352,7 +353,10 @@ body {
     margin-top: 98.21px;
     margin-left: 62.31px;
 }
-
+.price-box {
+    display: flex;
+    justify-content: center;
+}
 .section-price {
     padding-top: 100px;
     height: 616px;
@@ -477,16 +481,19 @@ body {
 .btn-professional {
     bottom: -116px;
     left: 130px;
+    background: var(--color-primary);
 }
 
 .btn-premium {
     bottom: -80px;
-    left: 108px;
+    left: 115px;
+    background: var(--color-greenL);
 }
 
 .section-contact {
     display: flex;
     justify-content: center;
+    margin-top: 155px;
 }
 
 .container-contact {
@@ -498,9 +505,8 @@ body {
 }
 
 .contact-box {
-    width: 342px;
     color: var(--color-black);
-    margin-right: 114px;
+    margin-right: 100px;
 }
 
 .contact-title {
@@ -520,16 +526,22 @@ body {
     margin-top: 42px;
     font-family: var(--openSans);
     font-size: 16px;
-    color: var(--color-primary);
+    color: var(--color-grey);
 }
 
 .contact-email {
     margin-right: 20px;
+    margin-left: 10px;
+}
+
+.contact-phone {
+    margin-left: 10px;
 }
 
 .form {
     display: flex;
     flex-direction: column;
+    width: 440px;
 }
 .form-row {
     display: flex;
@@ -540,10 +552,11 @@ body {
 
 .form-label {
     font-family: var(--openSans);
-    font-style: 11px;
+    font-size: 11px;
     letter-spacing: 3.28px;
     text-transform: uppercase;
     color: var(--color-primary);
+    font-weight: bold;
 }
 
 .form-control{
@@ -576,25 +589,59 @@ body {
 }
 
 .checkbox input:checked {
-    background-image: url("../images/icon_check.svg");
+    background-image: url("../assets/ckechmark-1.svg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 15px;
+    background-size: 24px;
+    border: none;
+
 }
 .form-row-last {
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
 }
+
 .form-button {
-    width: 142px;
-    height: 44px;
-    border-radius: 40px;
-    border: 1px solid var(--color-primary);
-    text-transform: uppercase;
+    width: 226px;
+    height: 57px;
+    border-radius: 35px;
     font-weight: bold;
     color: var(--color-white);
-    background: none;
+    background: var(--color-primary);
+    padding: 20px 97px;
     cursor: pointer;
-    font-size: 14px;
-    box-shadow:  0 3px 6px rgba(255,0,0,0.3);
+    font-size: 13px;
+    box-shadow: 5px 10px 14px var(--color-primary-shadow);
+    margin-top: 20px;
+    border: 0;
+}
+
+.footer {
+    box-shadow: 0 -5px 40px #00000029;
+    padding: 20px 0;
+    margin-top: 59px;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.footer__copy {
+    font-size: 0.6875rem;
+    line-height: 1.5rem;
+    color: var(--color-grey);
+    margin-top: 6px;
+}
+
+.footer__icons a:first-of-type {
+    margin-right: 25px;
 }
